# nom_permutation

./: Cargo.toml  build.rs  readme.md  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs  permutation.rs  permutation_opt.rs
