[package]
name = "nom_permutation"
description = "permutation conbinator for nom"
version = "1.0.0"
edition = "2021"
rust-version = "1.65.0"

authors = [ "plaskowski.stanislas@gmail.com" ]
readme = "readme.md"
keywords = ["nom", "combinator", "permutation"]
categories = ["parsing"]

license = "MIT"
repository = "https://github.com/Stargateur/nom_permutation"

include = [
  "readme.md",
  "Cargo.toml",
  "src/*.rs",
  "src/**/*.rs"
]

[features]
default = ["permutation", "permutation_opt"]
permutation = []
permutation_opt = []

[dependencies.nom]
version = "8"
default-features = false